manifests/matrix-host-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: matrix-host-service
  namespace: agent-execution
spec:
  type: ExternalName
  externalName: macbuntu.local
