manifests/ollama-system.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ollama-system
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 11434
    protocol: TCP
    targetPort: 11434
  selector:
    app: ollama
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ollama
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - image: ollama/ollama:0.5.11
        imagePullPolicy: IfNotPresent
        name: ollama
        ports:
        - containerPort: 11434
          protocol: TCP
        resources:
          limits:
            cpu: '2'
            memory: 10Gi
          requests:
            cpu: '1'
            memory: 4Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /root/.ollama
          name: model-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: model-storage
        persistentVolumeClaim:
          claimName: ollama-models-pvc

---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  annotations:
    pv.kubernetes.io/bind-completed: 'yes'
    pv.kubernetes.io/bound-by-controller: 'yes'
    volume.beta.kubernetes.io/storage-provisioner: rancher.io/local-path
    volume.kubernetes.io/selected-node: graham-macbuntu
    volume.kubernetes.io/storage-provisioner: rancher.io/local-path
  finalizers:
  - kubernetes.io/pvc-protection
  name: ollama-models-pvc
  namespace: ollama-system
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 20Gi
  storageClassName: local-path
  volumeMode: Filesystem
  volumeName: pvc-c6b17c1d-1961-4384-9d38-feddd5c40ed4

---
apiVersion: v1
data:
  ca.crt: '-----BEGIN CERTIFICATE-----

    MIIBdzCCAR2gAwIBAgIBADAKBggqhkjOPQQDAjAjMSEwHwYDVQQDDBhrM3Mtc2Vy

    dmVyLWNhQDE3Nzc0Mjk5MTcwHhcNMjYwNDI5MDEzMTU3WhcNMzYwNDI2MDEzMTU3

    WjAjMSEwHwYDVQQDDBhrM3Mtc2VydmVyLWNhQDE3Nzc0Mjk5MTcwWTATBgcqhkjO

    PQIBBggqhkjOPQMBBwNCAAQmdBRQ80GFePJ/u73noaXvbf0HEQ9/1BkN7OTPvQ9v

    //Axl9S1hAX4dCO0JTKhVEv0ErGCEfeNG8MMhxcNKdmao0IwQDAOBgNVHQ8BAf8E

    BAMCAqQwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUi9YxE6Z9T5naXtJ0fnln

    zlCfCUMwCgYIKoZIzj0EAwIDSAAwRQIgHCTbhqqrvjH1Jl1ISAuQPs+EOJK4pijj

    yUMp4/byqQoCIQC4tNGK8bHlSQdhu0DgUFsbH3y3VhtUwTQCSaP1klcyLQ==

    -----END CERTIFICATE-----

    '
kind: ConfigMap
metadata:
  annotations:
    kubernetes.io/description: Contains a CA bundle that can be used to verify the
      kube-apiserver when using internal endpoints such as the internal service IP
      or kubernetes.default.svc. No other usage is guaranteed across distributions
      of Kubernetes clusters.
  name: kube-root-ca.crt
  namespace: ollama-system
